
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports=true

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="secret_loader"
author="Moritz Eilfort"
author-email="secret-loader@jimfawkes.com"
home-page="https://github.com/JimFawkes/secret-loader"
requires= [
  "boto3 <1.27, >1.13",
  "python-dotenv <0.22, >0.13",
]
requires-python=">=3.9"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    'Natural Language :: English',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.requires-extra]
test= [
  "pytest==7.2.0",
  "pytest-cov==4.0.0"

]

[tool.flit.entrypoints.console_scripts]
secret-loader="secret_loader.cli:cli"
